<resources>
    <string name="main_bg_subtitle">Tap \"Search\" to get started
\n</string>
    <string name="view_count_text">%1$s views</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Install VLC?</string>
    <string name="no_player_found_toast">No stream player found (you can install VLC to play it).</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="fdroid_vlc_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="controls_download_desc">Download stream file</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean \"%1$s\"?</string>
    <string name="search_showing_result_for">Showing results for: %s</string>
    <string name="share_dialog_title">Share with</string>
    <string name="choose_browser">Choose browser</string>
    <string name="screen_rotation">rotation</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Removes audio at some resolutions</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="popup_mode_share_menu_title">Popup mode</string>
    <string name="rss_button_title" translatable="false">RSS</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Could not change subscription</string>
    <string name="subscription_update_failed">Could not update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Playlists</string>
    <string name="tab_new">New Tab</string>
    <string name="tab_choose">Choose Tab</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="controls_add_to_playlist_title">Add To</string>
    <string name="download_path_title">Video download folder</string>
    <string name="download_path_summary">Downloaded video files are stored here</string>
    <string name="download_path_dialog_title">Choose download folder for video files</string>
    <string name="download_path_audio_title">Audio download folder</string>
    <string name="download_path_audio_summary">Downloaded audio files are stored here</string>
    <string name="download_path_audio_dialog_title">Choose download folder for audio files</string>
    <string name="download_choose_new_path">Change the download folders to take effect</string>
    <string name="autoplay_by_calling_app_title">Autoplay</string>
    <string name="autoplay_by_calling_app_summary">Plays a video when BlayTube is called from another app</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices can play 2K/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Install missing Kore app?</string>
    <string name="kore_package" translatable="false">org.xbmc.kore</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="notification_scale_to_square_image_title">Scale thumbnail to 1:1 aspect ratio</string>
    <string name="notification_scale_to_square_image_summary">Scale the video thumbnail shown in the notification from 16:9 to 1:1 aspect ratio (may introduce distortions)</string>
    <string name="notification_action_0_title">First action button</string>
    <string name="notification_action_1_title">Second action button</string>
    <string name="notification_action_2_title">Third action button</string>
    <string name="notification_action_3_title">Fourth action button</string>
    <string name="notification_action_4_title">Fifth action button</string>
    <string name="notification_actions_summary">Edit each notification action below by tapping on it. Select up to three of them to be shown in the compact notification by using the checkboxes on the right.</string>
    <string name="notification_actions_at_most_three">You can select at most three actions to show in the compact notification!</string>
    <string name="notification_action_repeat">Repeat</string>
    <string name="notification_action_shuffle">Shuffle</string>
    <string name="notification_action_buffering">Buffering</string>
    <string name="notification_action_nothing">Nothing</string>
    <string name="notification_colorize_title">Colorize notification</string>
    <string name="notification_colorize_summary">Have Android customize the notification\'s color according to the main color in the thumbnail (note that this is not available on all devices)</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_video_format_title">Default video format</string>
    <string name="theme_title">Theme</string>
    <string name="night_theme_title">Night Theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="popup_remember_size_pos_title">Remember popup properties</string>
    <string name="popup_remember_size_pos_summary">Remember last size and position of popup</string>
    <string name="use_inexact_seek_title">Use fast inexact seek</string>
    <string name="use_inexact_seek_summary">Inexact seek allows the player to seek to positions faster with reduced precision. Seeking for 5, 15 or 25 seconds doesn\'t work with this.</string>
    <string name="seek_duration_title">Fast-forward/-rewind seek duration</string>
    <string name="clear_queue_confirmation_title">Ask for confirmation before clearing a queue</string>
    <string name="clear_queue_confirmation_summary">Switching from one player to another may replace your queue</string>
    <string name="clear_queue_confirmation_description">The active player queue will be replaced</string>
    <string name="download_thumbnail_title">Load thumbnails</string>
    <string name="download_thumbnail_summary">Turn off to prevent loading thumbnails, saving data and memory usage. Changes clear both in-memory and on-disk image cache.</string>
    <string name="show_comments_title">Show comments</string>
    <string name="show_comments_summary">Turn off to hide comments</string>
    <string name="show_next_and_similar_title">Show \'Next\' and \'Similar\' videos</string>
    <string name="show_description_title">Show description</string>
    <string name="show_description_summary">Turn off to hide video description and additional information</string>
    <string name="show_meta_info_title">Show meta info</string>
    <string name="show_meta_info_summary">Turn off to hide meta info boxes with additional information about the stream creator, stream content or a search request.</string>
    <string name="thumbnail_cache_wipe_complete_notice">Image cache wiped</string>
    <string name="metadata_cache_wipe_title">Wipe cached metadata</string>
    <string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
    <string name="metadata_cache_wipe_complete_notice">Metadata cache wiped</string>
    <string name="auto_queue_title">Auto-queue next stream</string>
    <string name="auto_queue_summary">Continue ending (non-repeating) playback queue by appending a related stream</string>
    <string name="auto_queue_toggle">Auto-queue</string>
    <string name="volume_gesture_control_title">Volume gesture control</string>
    <string name="volume_gesture_control_summary">Use gestures to control player volume</string>
    <string name="brightness_gesture_control_title">Brightness gesture control</string>
    <string name="brightness_gesture_control_summary">Use gestures to control player brightness</string>
    <string name="player_gesture_controls_title">Player gesture controls</string>
    <string name="player_gesture_controls_summary">Use gestures to control player brightness and volume</string>
    <string name="show_search_suggestions_title">Search suggestions</string>
    <string name="show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="enable_search_history_title">Search history</string>
    <string name="enable_search_history_summary">Store search queries locally</string>
    <string name="enable_watch_history_title">Watch history</string>
    <string name="enable_playback_resume_title">Resume playback</string>
    <string name="enable_playback_resume_summary">Restore last playback position</string>
    <string name="enable_playback_state_lists_title">Positions in lists</string>
    <string name="enable_playback_state_lists_summary">Show playback position indicators in lists</string>
    <string name="settings_category_clear_data_title">Clear data</string>
    <string name="enable_watch_history_summary">Keep track of watched videos</string>
    <string name="resume_on_audio_focus_gain_title">Resume playing</string>
    <string name="resume_on_audio_focus_gain_summary">Continue playing after interruptions (e.g. phonecalls)</string>
    <string name="download_dialog_title">Download</string>
    <string name="autoplay_title">Autoplay</string>
    <string name="show_hold_to_append_title">Show \"Hold to append\" tip</string>
    <string name="show_hold_to_append_summary">Show tip when pressing the background or the popup button in video \"Details:\"</string>
    <string name="unsupported_url">Unsupported URL</string>
    <string name="unsupported_url_dialog_message">Could not recognize the URL. Open with another app?</string>
    <string name="default_content_country_title">Default content country</string>
    <string name="service_title">Service</string>
    <string name="content_language_title">Default content language</string>
    <string name="peertube_instance_url_title">PeerTube instances</string>
    <string name="peertube_instance_url_summary">Select your favorite PeerTube instances</string>
    <string name="peertube_instance_url_help">Find the instances you like on %s</string>
    <string name="peertube_instance_list_url" translatable="false">https://joinpeertube.org/instances#instances-list</string>
    <string name="peertube_instance_add_title">Add instance</string>
    <string name="peertube_instance_add_help">Enter instance URL</string>
    <string name="peertube_instance_add_fail">Could not validate instance</string>
    <string name="peertube_instance_add_https_only">Only HTTPS URLs are supported</string>
    <string name="settings_category_downloads_title">Download</string>
    <string name="downloads_storage_ask_title">Ask where to download</string>
    <string name="downloads_storage_ask_summary_kitkat">You will be asked where to save each download.\nChoose SAF if you want to download to an external SD card</string>
</resources>